--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -71,7 +71,7 @@ jobs:
   - task: smoke_test
     file: attendee-service-source/ci/tasks/smoke-test.yml
     params:
-      ATTENDEE_SERVICE_URL: http://attendee-service-unlistening-haruspex.cfapps.io
+      ATTENDEE_SERVICE_URL: {{smoke-test-url}}
   - put: slack-alert
     params:
       text: |
