Modifying setup to point apps to PEZ

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,6 @@
 applications:
 - name: attendee-service
+  host: concourse-attendee-service.cfapps.pez.pivotal.io
   instances: 1
   memory: 1024M
   disk_quota: 1024M
