--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 - name: attendee-service
-  host: concourse-attendee-service.cfapps.pez.pivotal.io
+  host: concourse-attendee-service
   instances: 1
   memory: 1024M
   disk_quota: 1024M
